--- a/static/create_order.css
+++ b/static/create_order.css
@@ -27,19 +27,26 @@
 
 /* individual button styling */
 #main-block {
-  color: white;
   background-color: green;
   width: 200px;
   height: 100px;
-  border-radius: 10%;
-  position: relative;
 }
 
-#side-block {
-  color: white;
+#side-one-block {
   background-color: darkred;
   width: 100px;
   height: 100px;
-  border-radius: 10%;
-  position: relative;
+  float: left;
+
+}
+
+#side-two-block {
+  background-color: blue;
+  width: 100px;
+  height: 100px;
+  float: left;
+}
+
+#wrapper{
+  overflow: hidden;
 }
