--- a/templates/create-order.html
+++ b/templates/create-order.html
@@ -7,8 +7,11 @@
 
 
 {% block body %}
-<div id="main-block"></div>
-<div id="side-block"></div>
+<div id="main-block-id"></div>
+<div id="wrapper">
+<div id="side-one-block-id"></div>
+<div id="side-two-block-id"></div>
+</div>
 
 
 <script type="text/jsx" src="/static/OrderingBlocks.jsx">
